@@ -1,28 +1,24 @@
 package io.jasercloud.sdwan.tun;
 
-import io.jaspercloud.sdwan.exception.ProcessException;
-
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
+import java.util.ArrayList;
+import java.util.List;
 
 public class ProcessUtil {
 
-    public static String query(String command) throws IOException, InterruptedException {
+    public static List<String> query(String command) throws IOException, InterruptedException {
         Process process = exec(command.split(" "));
-        int code = process.waitFor();
-        if (0 != code) {
-            throw new ProcessException();
-        }
-        StringBuilder builder = new StringBuilder();
+        process.waitFor();
+        List<String> lines = new ArrayList<>();
         String line;
         try (BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream(), "utf-8"))) {
             while (null != (line = reader.readLine())) {
-                builder.append(line);
+                lines.add(line);
             }
         }
-        String out = builder.toString();
-        return out;
+        return lines;
     }
 
     public static int exec(String command) throws IOException, InterruptedException {
@@ -31,7 +27,7 @@ public class ProcessUtil {
     }
 
     public static Process exec(String... command) throws IOException, InterruptedException {
-        Process process = Runtime.getRuntime().exec(command);
+        Process process = new ProcessBuilder(command).redirectErrorStream(true).start();
         return process;
     }
 }
